package com.padroes.interpreter;

public interface Expressao {
    int interpretar(Contexto contexto);
}
